sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:6: error: Boolean does not take parameters
 while(fin() == false){ 
          ^