sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {

  var fin:Boolean = false;
  
 while(fin() == false){ 
  
  for( i <- 0 to getNombreValeurs()){
    if (plusPetitQue(i,i+1)== false){
      echange(i,i+1)
    }
  }
 } 
}
